# OAIP-LabWorks-45350110

Task_1/: CMakeLists.txt  Class.cpp  Task_1.cpp  Tests.cpp
Task_2/: CMakeLists.txt  Functions.cpp  Task_2  Task_2.cpp  Tests.cpp  input.txt
Task_3/: CMakeLists.txt  Funclions.cpp  Task_3  Task_3.cpp  Tests.cpp
